Fix date/time picker height on small screens

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -33,4 +33,10 @@ body {
     justify-content: center;
     align-items: center;
   }
+
+  .cdk-overlay-container {
+    .cdk-overlay-pane.mat-datepicker-popup {
+      max-height: none;
+    }
+  }
 }
